[gd_scene format=3 uid="uid://gcpxx4boco1g"]

[ext_resource type="PackedScene" uid="uid://sq6x1a4b2hoo" path="res://tscns/direction_value.tscn" id="1_dir"]
[ext_resource type="Texture2D" uid="uid://b7id5pfe8dtrt" path="res://icon.svg" id="2_icon"]
[ext_resource type="Script" uid="uid://dam8gx2a3m0nd" path="res://scripts/unit_card.gd" id="3_script"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4qfqs"]
blend_mode = 1

[node name="UnitCard" type="Control" unique_id=1679329416]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 220.0
script = ExtResource("3_script")
player_color = Color(0.2, 0.4509804, 1, 0.34901962)

[node name="CardBg" type="Panel" parent="." unique_id=1168027749]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CardBg" unique_id=1213949098]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.26666668, 0.50980395, 0.29803923)

[node name="Art" type="TextureRect" parent="CardBg" unique_id=1127650245]
material = SubResource("CanvasItemMaterial_4qfqs")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.75
offset_left = -16.0
offset_top = -22.0
offset_right = 16.0
offset_bottom = 55.0
mouse_filter = 2
texture = ExtResource("2_icon")
expand_mode = 1

[node name="DirNums" type="Control" parent="." unique_id=1838042777]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="N" parent="DirNums" unique_id=2095976083 instance=ExtResource("1_dir")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 144.0
offset_right = 18.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="E" parent="DirNums" unique_id=1361762367 instance=ExtResource("1_dir")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 49.0
offset_right = -14.0
offset_bottom = 85.0
grow_horizontal = 0
grow_vertical = 2

[node name="S" parent="DirNums" unique_id=1696224763 instance=ExtResource("1_dir")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -40.0
offset_right = 18.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="W" parent="DirNums" unique_id=724136632 instance=ExtResource("1_dir")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = 50.0
offset_right = 55.0
offset_bottom = 86.0
grow_vertical = 2

[node name="HoverBorder" type="Panel" parent="." unique_id=283420279]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
